# fraud-detection-platform

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: base.yaml  development.yaml  logging.yaml  production.yaml
docs/: template-usage.md
docs/adr/: README.md
docs/architecture/: README.md  fraud-platform-current-state.md
docs/engineering-journal/: README.md
docs/ml-system/: architecture-overview.md  data-ingestion-strategy.md  data-strategy.md  fraud-platform-case-study.md  modeling-strategy.md  (+8 more)
tests/: test_action_summary.py  test_analyze_score_distribution_cli.py  test_baseline_model.py  test_batch_inference.py  test_batch_inference_cli.py  test_calibrated_decision_policy.py  test_calibrated_paysim_model.py  test_cost_scenarios.py  test_costs.py  test_data_loader.py  test_decision_policy.py  test_evaluate_cost_scenarios_cli.py  test_evaluate_threshold_costs_cli.py  test_evaluate_thresholds_cli.py  test_feature_transformers.py  test_generate_sample_data_cli.py  test_logger.py  test_metrics.py  test_model_persistence.py  test_package.py  test_paysim.py  test_paysim_baseline_model.py  test_paysim_batch_inference.py  test_paysim_batch_inference_cli.py  test_paysim_features.py  test_paysim_training_pipeline.py  test_prepare_paysim_data_cli.py  test_sample_generator.py  test_score_distribution.py  test_settings.py  test_summarize_actions_cli.py  test_thresholds.py  test_train_paysim_enriched_cli.py  test_training_cli.py  test_training_pipeline.py
(+45 files in other folders)
