[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fraud-detection-platform"
version = "0.1.0"
description = "A production-style real-time fraud detection machine learning platform."
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
    { name = "Peter Adepoju" }
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

config = [
    "pydantic>=2.8.0",
    "PyYAML>=6.0.0",
]


ml = [
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "mlflow>=2.14.0",
]

api = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
]

monitoring = [
    "evidently>=0.4.30",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
